--- a/app/src/main/res/layout/app_bar_new_in.xml
+++ b/app/src/main/res/layout/app_bar_new_in.xml
@@ -16,6 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:collapseIcon="@drawable/menu_icon"
+            app:navigationIcon="@drawable/menu_icon"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:titleTextColor="@color/colorAccent" />
 
