--- a/app/src/main/res/layout/view_item_new_in.xml
+++ b/app/src/main/res/layout/view_item_new_in.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
-    android:layout_height="250dp"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="0dp">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="160dp"
+    android:layout_height="260dp"
+    android:layout_gravity="center_horizontal"
+    android:layout_margin="@dimen/basic10"
+    android:layout_marginEnd="@dimen/basic5">
 
     <RelativeLayout
 
@@ -49,4 +49,4 @@
             android:text="Ordinary Shoe"
             android:textColor="@color/colorPrimaryDark" />
     </RelativeLayout>
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
