--- a/app/src/main/res/layout/view_item_new_in_lg.xml
+++ b/app/src/main/res/layout/view_item_new_in_lg.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:layout_gravity="center_horizontal"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="0dp">
+    android:layout_width="250dp"
+    android:layout_height="330dp"
+    android:layout_marginEnd="@dimen/basic50"
+    android:layout_marginStart="@dimen/basic50"
+    app:layout_anchorGravity="center_horizontal">
 
     <RelativeLayout
 
@@ -15,13 +15,13 @@
         <RelativeLayout
             android:id="@+id/upper_frame"
             android:layout_width="match_parent"
-            android:layout_height="220dp">
+            android:layout_height="300dp">
 
             <ImageView
-                android:id="@+id/item_picture"
+                android:id="@+id/item_picture_lg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerInside"
+                android:scaleType="center"
                 android:src="@drawable/shoe" />
 
             <TextView
@@ -29,9 +29,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="@dimen/basic80"
-                android:layout_marginTop="@dimen/basic10"
-                android:background="#afa"
+
+                android:layout_marginTop="@dimen/basic50"
+                android:background="@color/colorPrimary"
                 android:paddingEnd="@dimen/basic10"
                 android:paddingStart="@dimen/basic10"
                 android:text="New"
@@ -40,7 +40,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/item_name"
+            android:id="@+id/item_name_lg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -51,4 +51,4 @@
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/text_md" />
     </RelativeLayout>
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
