--- a/app/src/main/res/menu/activity_new_in_drawer.xml
+++ b/app/src/main/res/menu/activity_new_in_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/new_in"
-            android:title="new" />
+            android:title="NEW" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
